================================
Change history of ecoval package
================================


Changes version 1.2.2 (09.03.2019) -> version 1.2.3 (26.03.2019)
================================================================

PR:     msk.macrophytes.2017: annotation type probability plot
        msk.macrophytes.2017: French language corrections
        

Changes version 1.2.1 (27.09.2018) -> version 1.2.2 (09.03.2019)
================================================================

PR:     error handling in msk.macrophytes.2017.read.compile.evaluate improved

PR:     msk.morphol.1998.create: riparian zone evaluation complemented by a finer
        data resolution in 8 rather than in only 3 classes (still only with 3 
        different value outcomes)

PR:     lake.morphol.2016.create: attribute levels added to dictionary

PR:     default values of the arguments attrib.names and col.names of the function
        lake.morphol.2016.read.attrib set to NA; this results in values taken from
        the dictionary

PR:     French and English translations implemented for macrophyte assessment


Changes version 1.2 (03.05.2018) -> version 1.2.1 (27.09.2018)
==============================================================

PR:     minor modification to msk.morphol.1998 to allow for NA in bed
        modification and bank modification material (in particular relevant
        if there is no modification; otherwise assuming the worse material)

CM:     minor correction to the function msk.macrophytes.2017.calc.attrib
        to correctly calculate number of taxa in case of submers/emergent species.
        
PR:     msk.macrophytes.2017.read.compile.evaluate: eliminated program crash
        in case of missing data required for calculating macrophytes river types. 
		
PR:     dictionary to msk.morphol.1998.create: "Eindohlung" corrected to "Eindolung"


Changes version 1.1 (19.01.2017) -> version 1.2 (03.05.2018)
============================================================
