@@ -1,8 +1,8 @@
 Package: ecoval
 Type: Package
 Title: Procedures for Ecological Assessment of Surface Waters
-Version: 1.2.3
-Date: 2019-03-26
+Version: 1.2.4
+Date: 2019-05-14
 Author: Nele Schuwirth <nele.schuwirth@eawag.ch> and Peter Reichert <peter.reichert@eawag.ch> 
   with contributions by Simone Langhans and Christian Michel
 Maintainer: Nele Schuwirth <nele.schuwirth@eawag.ch>
@@ -11,9 +11,9 @@ Description: Functions for evaluating and visualizing
   containing physical, chemical and biological assessments
   in the form of value functions.
 License: GPL-3
-Depends: utility, rivernet, jpeg
+Depends: R (>= 3.5.0), utility, rivernet, jpeg
 LazyData: true
 NeedsCompilation: no
-Packaged: 2019-03-26 07:12:12 UTC; reichert
+Packaged: 2019-05-14 08:37:05 UTC; reichert
 Repository: CRAN
-Date/Publication: 2019-03-26 16:10:03 UTC
+Date/Publication: 2019-05-14 10:20:21 UTC
