@@ -1,4 +1,4 @@
-b96b56259849ff5f52b54d37ecdc0c98 *DESCRIPTION
+a115e973ee071ee84437c42a62f7d714 *DESCRIPTION
 851667a73b0ae10d7769f96bf7803a09 *NAMESPACE
 e4587fa3be329c82ebe65fc38053a5f4 *R/ecoval.plotsymbols.r
 a50ceee4d1d9340e62b1a88b4a8f6190 *R/ecoval.r
@@ -9,9 +9,9 @@ c96f32967699ce1444e7a3c3d51efad6 *R/msk.fish.2004.r
 6d4c5c85ff655e9386193721216e443e *R/msk.hydrol.2011.r
 c167ce18d671a625a9f25e09ff004b85 *R/msk.invertebrates.2010.r
 385b902127cdae5dc7c04058ea5f0c79 *R/msk.macrophytes.2017.calc.types.r
-12c495db4911ce783517059dbfe56dd0 *R/msk.macrophytes.2017.doc.R
+3ce75eb7dd672d44ac0076f241bbdcdc *R/msk.macrophytes.2017.doc.R
 c8df1f401391340f9264bdc6e0eef093 *R/msk.macrophytes.2017.plaus.crit.R
-34e71f2f828785a91c9ce6069f690cae *R/msk.macrophytes.2017.prepare.data.R
+852e76d3428b64691395b947c363f8b4 *R/msk.macrophytes.2017.prepare.data.R
 98850c0050aa4533b4efe73322c26481 *R/msk.macrophytes.2017.r
 5be6c4827cfcac278d649f03cd9c7e77 *R/msk.macrophytes.2017.read.compile.evaluate.R
 2ac81edeffab8d892a41b1f1b245bcfc *R/msk.morphol.1998.r
@@ -23,25 +23,25 @@ b1bd4483ea43417272fc4d3f0905466d *R/val.heavymetals.r
 6fd4d702c4430ae1af6356e0f2881f31 *R/val.micropoll.r
 1c48f57e36076cfc14c9f8c71f42c543 *R/val.pesticides.r
 36d30a7475c880341d56c355fca4c6a1 *R/val.spear.r
-5acbf62c965b3c2d3304f5a5aecff32a *data/ecoval_data.RData
-45f6e657b3d22a068350988554e410ae *inst/NEWS
-383c2c9f9cf76060cc7a019abc05b85c *inst/ecoval.dictionaries.default.dat
+44cb85ed405dba2339b5619e4b90325d *data/ecoval_data.RData
+1ccdbb1bb9a5ec493ea1f153cbf5ddb5 *inst/NEWS
+9cec617458ac90215ece6adc79ce5e08 *inst/ecoval.dictionaries.default.dat
 a9a12605ac8ec47ef0eaf819b6e30fdf *inst/ecoval_manual_plots.r
 d4c4ef171bfb5fcba04be0cdb67bd717 *inst/msk.macrophytes.2017_ListTaxa.dat
 5bde5920014e5b60509cc142a05e1eee *inst/msk.macrophytes.2017_RiverTypes_DefLimitsUnc.dat
 bba7aab399abb17c41be1db2d19e8a81 *inst/msk.macrophytes.2017_RiverTypes_DefObsUnc.dat
 d23e521f5f4d6999791fe3ab38b8fcee *inst/msk.macrophytes.2017_RiverTypes_DefStruct.dat
-6c82fb44eed68586907dd7afc1875fb8 *man/ecoval-package.Rd
+3a11425804a81c35b6b4d300b506e63c *man/ecoval-package.Rd
 3f1259d11e192aa01a3b8878ed6d0869 *man/ecoval.dict.Rd
 bb1307e6a6af63bc315c0d3fb21a0bcc *man/ecoval.dictionaries.default.Rd
 f208b27d5e32a1874127df9036289c01 *man/ecoval.plotsymbols.Rd
 bd1b0bd057ba3625bdfaef5416ad9a29 *man/ecoval.river.create.Rd
 9fd4111269762dc22939770a82f9b16f *man/ecoval.translate.Rd
-378a1ea5e604d9fab7bb50fabfa81dbd *man/figures/lakemorphol2016.pdf
+3ab7c2ea23cb485e60c342fb6d5006bb *man/figures/lakemorphol2016.pdf
 344ae730ead3f8ebd428e8a0e49700bd *man/figures/lakemorphol2016.png
-bc6f416e25b8858702ccd7ef1ab5ad10 *man/figures/lakemorphol2016French.pdf
+e13cb604a334f3cad35c6940a8260219 *man/figures/lakemorphol2016French.pdf
 f5282832b04009c1d7259f8fd477ed95 *man/figures/lakemorphol2016French.png
-1b4f1948f2691b0bc4921743fe276d52 *man/figures/lakemorphol2016German.pdf
+a31f94157593f0fc3c02088091f77b8c *man/figures/lakemorphol2016German.pdf
 d5121b7634b08c7519b9304844a05e50 *man/figures/lakemorphol2016German.png
 6a486b51365848aadf3682e018ae49d8 *man/lake.morphol.2016.aggregate.val.spatial.Rd
 f358cc735e427e6c8922e15c4ce9fb2b *man/lake.morphol.2016.create.Rd
@@ -64,7 +64,7 @@ b3f7ed2a24e0addfb15cf8d4c5683f94 *man/msk.macrophytes.2017.doc.site.Rd
 91343567f4518ffcc6fda9a333ac8541 *man/msk.macrophytes.2017.plot.typedef.Rd
 cf21e68562d9025e546a44e9275bef8c *man/msk.macrophytes.2017.plot.types.grfo.Rd
 353151809d5fccab971e815944ef2df0 *man/msk.macrophytes.2017.plot.types.scheme.Rd
-495835654d8f5df1e926d81df1429adc *man/msk.macrophytes.2017.read.compile.evaluate.Rd
+939e2a4910a26efe76899ddae125561e *man/msk.macrophytes.2017.read.compile.evaluate.Rd
 3642eafdce9899c72201e600de21e25d *man/msk.macrophytes.2017_ListTaxa.Rd
 3d37bda503e808131a047b326656c6b7 *man/msk.macrophytes.2017_RiverTypes_DefLimitsUnc.Rd
 6b1cbdfa69e3ffd2fa7bffbdbde30aee *man/msk.macrophytes.2017_RiverTypes_DefObsUnc.Rd
