@@ -3,6 +3,15 @@ Change history of ecoval package
 ================================
 
 
+Changes version 1.2.3 (26.03.2019) -> version 1.2.4 (14.05.2019)
+================================================================
+
+PR:     msk.macrophytes.2017: some improvements to the site documentation pdfs
+
+PR:     msk.macrophytes.2017: removal of briophytes of determiniation class 3
+          excluded if uncertainty class is equal to 2 (expert)
+        
+
 Changes version 1.2.2 (09.03.2019) -> version 1.2.3 (26.03.2019)
 ================================================================
 
